tests/baselines/reference/exportAssignmentWithoutIdentifier1.errors.txt
==== tests/cases/compiler/exportAssignmentWithoutIdentifier1.ts (1 errors) ====
    function Greeter() {
        //...
    }
    Greeter.prototype.greet = function () {
        //...
    }
    export = new Greeter();
             ~~~
!!! exportAssignmentWithoutIdentifier1.ts(7,10): error TS1006: Identifier expected; 'new' is a keyword.
    